Reminder on how to run geco-postprocessing.

--- a/bin/README
+++ b/bin/README
@@ -2,3 +2,6 @@ To run the program from within the source tree, update your Python
 path according to:
 
   export PYTHONPATH="..:$PYTHONPATH"
+
+and type 
+  >> geco-postprocess-<operation>
