Edits to figure scripts.

--- a/utils/compile_movie_frames.ipynb
+++ b/utils/compile_movie_frames.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +223,7 @@
    ],
    "source": [
     "steps = [int(name.split('.')[2]) for name in glob.glob('./frames-2d/cosmic-string-2d.*')]\n",
+    "#steps = range(3)\n",
     "\n",
     "for step in steps:\n",
     "    \n",
