--- a/utils/generate_highlighted_dataplots.ipynb
+++ b/utils/generate_highlighted_dataplots.ipynb
@@ -13,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os, glob\n",
@@ -23,20 +25,17 @@
     "import numpy as np\n",
     "import matplotlib.image as mpimg\n",
     "from PIL import Image\n",
-    "#matplotlib.rcParams['figure.figsize'] = (20.0, 10.0)\n",
     "lib_dir=\"/Users/elleryames/Research/projects/projectgeco/geco/geco/\"\n",
     "module_path = os.path.abspath(os.path.join(lib_dir))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)   \n",
     "import gecoplotlib as gpl\n",
-    "\n",
-    "plt.rcParams['figure.figsize'] = (20.0, 10.0)\n",
     "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -52,17 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save highlighted data plot for each step\n",
     "for i in range(len(data_files)):      \n",
     "        # Generate plot of data sequence    \n",
     "        print(\"generating figure {:02}\".format(i))\n",
-    "        plt.clf()\n",
     "        data_plot = gpl.geco_pp_plot([data_files], 'zamo_redshift_peak', 'mass_aspect_max', legend_labels ='empty', savefig=False)\n",
     "    \n",
     "        # Get and plot highlighted run\n",
@@ -70,7 +66,8 @@
     "        gpl.highlight_point(data_plot, cur_sol_data, 'zamo_redshift_peak', 'mass_aspect_max', hmarker='*')\n",
     "\n",
     "        #data_plot.show()\n",
-    "        data_plot.savefig(save_dir + '/highlighted_data_0{:02}.jpg'.format(i), dpi=500, bbox_inches='tight')\n"
+    "        data_plot.savefig(save_dir + '/highlighted_data_0{:02}.jpg'.format(i), dpi=96, bbox_inches='tight')\n",
+    "        plt.clf(data_plot)\n"
    ]
   },
   {
