Edit paper and add reference for Anderson acceleration.

--- a/docs/paper-joss-2022/paper.bib
+++ b/docs/paper-joss-2022/paper.bib
@@ -54,3 +54,12 @@
   isbn = {0691130264},
 }
 
+@article{Walker:2011,
+  author = {Walker, Homer F. and Ni, Peng},
+  title = {{Anderson acceleration for fixed-point iterations}},
+  journal = {SIAM Journal of Numerical Analysis},
+  year = {2011},
+  volume = {49},
+  pages = {1715},
+  doi = {10.1137/10078356X},
+}
