--- a/docs/paper-joss-2022/paper.bib
+++ b/docs/paper-joss-2022/paper.bib
@@ -12,7 +12,7 @@
 }
 
 @article{Ames:2016,
-  author = {Ames, Ellery and 'easson, H{\aa}kan Andr and Logg, Anders},
+  author = {Ames, Ellery and H{\aa}kan, Andr{\'e}asson and Logg, Anders},
   title = {{On axisymmetric and stationary solutions of the self-gravitating Vlasov system}},
   journal = {Class. Quantum Grav.},
   year = {2016},
@@ -25,7 +25,7 @@
 }
 
 @article{Andreasson:2011,
-  author = {Andr'easson, H{\aa}kan},
+  author = {H{\aa}kan, Andr{\'e}asson},
   title = {{The Einstein-Vlasov System/Kinetic Theory}},
   journal = {Living Reviews in Relativity},
   year = {2011},
@@ -34,7 +34,7 @@
 }
 
 @article{Ames:2019,
-  author = {Ames, Ellery and Andr'easson, H{\aa}kan and Logg, Anders},
+  author = {Ames, Ellery and H{\aa}kan, Andr{\'e}asson and Logg, Anders},
   title = {{Cosmic string and black hole limits of toroidal Vlasov bodies in general relativity}},
   journal = {Physical review D},
   year = {2019},
@@ -47,7 +47,7 @@
 }
 
 @book{BinneyTremaine:2008,
-  author = {binney, James and Tremaine, Scott},
+  author = {Binney, James and Tremaine, Scott},
   title = {{Galactic Dynamics: Second Edition}},
   publisher = {Princeton University Press},
   year = {2008},
