Fix typo in references.

--- a/docs/paper-joss-2022/paper.bib
+++ b/docs/paper-joss-2022/paper.bib
@@ -12,7 +12,7 @@
 }
 
 @article{Ames:2016,
-  author = {Ames, Ellery and H{\aa}kan, Andr{\'e}asson and Logg, Anders},
+  author = {Ames, Ellery and Andr{\'e}asson, H{\aa}kan and Logg, Anders},
   title = {{On axisymmetric and stationary solutions of the self-gravitating Vlasov system}},
   journal = {Class. Quantum Grav.},
   year = {2016},
@@ -25,7 +25,7 @@
 }
 
 @article{Andreasson:2011,
-  author = {H{\aa}kan, Andr{\'e}asson},
+  author = {Andr{\'e}asson, H{\aa}kan},
   title = {{The Einstein-Vlasov System/Kinetic Theory}},
   journal = {Living Reviews in Relativity},
   year = {2011},
@@ -34,7 +34,7 @@
 }
 
 @article{Ames:2019,
-  author = {Ames, Ellery and H{\aa}kan, Andr{\'e}asson and Logg, Anders},
+  author = {Ames, Ellery and Andr{\'e}asson, H{\aa}kan and Logg, Anders},
   title = {{Cosmic string and black hole limits of toroidal Vlasov bodies in general relativity}},
   journal = {Physical review D},
   year = {2019},
